...
    
    private let eurLabel: UILabel = {
        let label = UILabel()
        label.textColor = .white
        label.textAlignment = .center
        label.font = .systemFont(ofSize: 16, weight: .regular)
        label.text = "EUR: "
        return label
    }()
    
    private let gbpLabel: UILabel = {
        let label = UILabel()
        label.textColor = .white
...
    
    private let rubLabel: UILabel = {
        let label = UILabel()
        label.textColor = .white
        label.textAlignment = .center
        label.font = .systemFont(ofSize: 16, weight: .regular)
        label.text = "RUB: "
        return label
    }()
    
    private let usdLabel: UILabel = {
        let label = UILabel()
        label.textColor = .white
...
        label.text = ""
        return label
    }()
    
    private let eurSellbutton: UIButton = {
        let button = UIButton()
        button.setTitle("Sat", for: .normal)
        button.backgroundColor = .systemBlue
        button.titleLabel?.font = .systemFont(ofSize: 20, weight: .bold)
        button.layer.cornerRadius = 10
        return button
    }()
    
    private let eurBuybutton: UIButton = {
        let button = UIButton()
        button.setTitle("Al", for: .normal)
        button.backgroundColor = .systemBlue
        button.titleLabel?.font = .systemFont(ofSize: 20, weight: .bold)
        button.layer.cornerRadius = 10
        return button
    }()

...
