...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.addSubview(collectionView)
        
        title = "Portfolio App"
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(didTapAdd))
        
        
        //print(FileManager.default.urls(for: .documentDirectory, in: .userDomainMask))
        //CoreDataService(groupedData: GroupedData()).fakeDataGenerator()
...
                    guard let text = Double(text) else { return AlertManager().showBasicAlert(on: self, title: "Error", message: "error", prefer: .alert)}
                    
                    if text > 0 {
                        let succes = self.portfolioViewModel.saveTransaction(portfolio: Portfolios(name: name, value: text), curr: self.currencies[name] ?? 1)
                        
                        if succes {
                            AlertManager().showBasicAlert(on: self, title: "Başarılı", message: "Satın Alınan Döviz Portföyünüze Eklendi.", prefer: .alert)
                            self.getData()
                            
                        } else {
                            AlertManager().showBasicAlert(on: self, title: "Error", message: "error", prefer: .alert)
                        }
                    } else {
...
