...
class AlertManager {
    
    
    private func showBasicAlert(on vc: UIViewController,with title: String, message: String?, prefer : UIAlertController.Style ){
        DispatchQueue.main.async {
            let alert = UIAlertController(title: title, message: message, preferredStyle: prefer)
            alert.addAction(UIAlertAction(title: "Tamam.", style: .default))
            vc.present(alert, animated: true)
        }
    }
}

extension AlertManager {
...
